# OpenOctopus

./: .gitignore  README.md
.github/workflows/: py-server.yml
docs/: API.yaml  DECISIONS.md  PROTOCOL.md  SCHEMA.md  SYSTEM_PROMPT.md  TOOLS.md  adr-audit-python-main.md
docs/reference/: README.md  adr-audit-python-main.md
docs/reference/superpowers/: README.md
docs/superpowers/plans/: 2026-06-17-py0-server-skeleton.md
docs/superpowers/specs/: 2026-06-17-py0-openoctopus-common-design.md  (+2 more)
server/: .env.example  pyproject.toml
server/src/openctopus_server/: __init__.py  config.py  main.py
server/src/openctopus_server/api/: auth.py  health.py  me.py  router.py
server/src/openctopus_server/api/admin/: config.py  users.py
server/src/openctopus_server/auth/: cookies.py  dependencies.py  jwt.py  password.py
server/src/openctopus_server/db/: base.py  engine.py  models.py  session.py
server/src/openctopus_server/dto/: config.py  error.py  message.py  session.py  user.py
server/src/openctopus_server/errors/: codes.py  exceptions.py  http.py
server/src/openctopus_server/provider/: wire_types.py
server/src/openctopus_server/services/: system_config.py  users.py
server/src/openctopus_server/tools/: truncate.py
server/tests/: conftest.py  test_admin_config.py  test_admin_users.py  test_auth.py  test_config.py  test_dtos.py  test_engine.py  test_error_codes.py  test_error_handler.py  test_health.py  test_jwt.py  test_me.py  test_password.py  test_schema_bootstrap.py  test_truncate.py  test_wire_types.py
server/tests/snapshots/: error_codes.json
(+17 files in other folders)
